--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     position: relative;
     width: 100%;
     height: 100%;
-  "></canvas></canvas>
-    <script src="Build/frog_jump.loader.js"></script>
+  "></canvas>
+    <script src="Build/WebGLTest.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -31,9 +31,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/frog_jump.data",
-        frameworkUrl: "Build/frog_jump.framework.js",
-        codeUrl: "Build/frog_jump.wasm",
+        dataUrl: "Build/WebGLTest.data",
+        frameworkUrl: "Build/WebGLTest.framework.js",
+        codeUrl: "Build/WebGLTest.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Nyanp_Cat",
