--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Nyanp_Cat</title>
+    <title>Unity WebGL Player | ver 0.2 Beta</title>
   </head>
-  <body style="text-align: center">
-    <canvas id="unity-canvas" width=540 height=960 style="width: 540px; height: 960px; background: #231F20"></canvas>
+  <body style="
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #231F20;
+  ">
+  <canvas id="unity-canvas"
+    style="
+    position: relative;
+    width: 100%;
+    height: 100%;
+  "></canvas>
     <script src="Build/WebGLTest.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
