--- a/WAN_CHASE/index.html
+++ b/WAN_CHASE/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/WAN_CHASE.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WAN_CHASE.data.unityweb",
-        frameworkUrl: buildUrl + "/WAN_CHASE.framework.js.unityweb",
-        codeUrl: buildUrl + "/WAN_CHASE.wasm.unityweb",
+        dataUrl: buildUrl + "/WAN_CHASE.data",
+        frameworkUrl: buildUrl + "/WAN_CHASE.framework.js",
+        codeUrl: buildUrl + "/WAN_CHASE.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WAN_CHASE",
