--- a/WordRogue/index.html
+++ b/WordRogue/index.html
@@ -98,7 +98,7 @@
 
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-        canvas.style.width = "1024px";
+        canvas.style.width = "1024";
         canvas.style.height = "768px";
       }
 
